--- a/.htaccess
+++ b/.htaccess
@@ -8,13 +8,13 @@
 </FilesMatch>
 
 # Don't show directory listings for URLs which map to a directory.
-Options -Indexes
+#Options -Indexes
 
 # Follow symbolic links in this directory.
-Options +FollowSymLinks
+#Options +FollowSymLinks
 
 # Multiviews creates problems with aliased URLs and is not needed for Drupal.
-Options -Multiviews
+#Options -Multiviews
 
 # Make Drupal handle any 404 errors.
 ErrorDocument 404 /index.php
@@ -22,7 +22,7 @@ ErrorDocument 404 /index.php
 # Force simple error message for requests for non-existent favicon.ico.
 <Files favicon.ico>
   # There is no end quote below, for compatibility with Apache 1.3.
-  ErrorDocument 404 "The requested file favicon.ico was not found.
+  ErrorDocument 404 "The requested file favicon.ico was not found."
 </Files>
 
 # Set the default handler.
@@ -104,13 +104,11 @@ DirectoryIndex index.php index.html index.htm
   #
   # If your site is running in a VirtualDocumentRoot at http://example.com/,
   # uncomment the following line:
-  RewriteBase /
+  RewriteBase /~gastagus.daemon/site
 
 #  Redirect 301 /plataforma2011 http://groups.ist.utl.pt/gastagus/plataforma2011
 #  Redirect 301 /plataforma2010 http://groups.ist.utl.pt/gastagus/plataforma2010a
 
-#RewriteRule ^plataforma2011$ http://plataforma.gastagus.org/2011/
-#RewriteRule ^plataforma2010$ http://plataforma.gastagus.org/2010/
 
 Redirect 301 /plataforma2011 http://plataforma.gastagus.org/2011
 Redirect 301 /plataforma2010 http://plataforma.gastagus.org/2010
