--- a/.htaccess
+++ b/.htaccess
@@ -19,7 +19,7 @@
 # Force simple error message for requests for non-existent favicon.ico.
 <Files favicon.ico>
   # There is no end quote below, for compatibility with Apache 1.3.
-  ErrorDocument 404 "The requested file favicon.ico was not found."
+  ErrorDocument 404 "The requested file favicon.ico was not found.
 </Files>
 
 # Make Drupal handle any 404 errors.
@@ -104,18 +104,9 @@ DirectoryIndex index.php index.html index.htm
   #
   # If your site is running in a VirtualDocumentRoot at http://example.com/,
   # uncomment the following line:
-  RewriteBase /~gastagus.daemon/site
 
-#  Redirect 301 /plataforma2011 http://groups.ist.utl.pt/gastagus/plataforma2011
-#  Redirect 301 /plataforma2010 http://groups.ist.utl.pt/gastagus/plataforma2010a
+  RewriteBase /~gastagus.daemon
 
-
-Redirect 301 /plataforma2011 http://plataforma.gastagus.org/2011
-Redirect 301 /plataforma2010 http://plataforma.gastagus.org/2010
-
-
-#  Redirect 301 /plataforma2010 http://plataforma.gastagus.org/2011
-#  Redirect 301 /plataforma2012 http://plataforma.gastagus.org/2010
   # Pass all requests not referring directly to files in the filesystem to
   # index.php. Clean URLs are handled in drupal_environment_initialize().
   RewriteCond %{REQUEST_FILENAME} !-f
@@ -148,5 +139,3 @@ Redirect 301 /plataforma2010 http://plataforma.gastagus.org/2010
     </FilesMatch>
   </IfModule>
 </IfModule>
-
-# $Id$
