--- a/.htaccess
+++ b/.htaccess
@@ -8,19 +8,13 @@
 </FilesMatch>
 
 # Don't show directory listings for URLs which map to a directory.
-#Options -Indexes
+#Options -/Indexes
 
 # Follow symbolic links in this directory.
 #Options +FollowSymLinks
 
 # Multiviews creates problems with aliased URLs and is not needed for Drupal.
 #Options -Multiviews
-
-# Force simple error message for requests for non-existent favicon.ico.
-<Files favicon.ico>
-  # There is no end quote below, for compatibility with Apache 1.3.
-  ErrorDocument 404 "The requested file favicon.ico was not found.
-</Files>
 
 # Make Drupal handle any 404 errors.
 ErrorDocument 404 /index.php
@@ -80,6 +74,42 @@ DirectoryIndex index.php index.html index.htm
   # downloaded.
   RewriteRule "(^|/)\." - [F]
 
+  RewriteRule (caminhada)$ /index?q=$1 [R=301]
+  RewriteRule (a-nossa-rede)$ /index?q=$1 [R=301]
+  RewriteRule (angola)$ /index?q=$1 [R=301]
+  RewriteRule (apoios)$ /index?q=$1 [R=301]
+  RewriteRule (cabo-verde)$ /index?q=$1 [R=301]
+  RewriteRule (caminhada)$ /index?q=$1 [R=301]
+  RewriteRule (como-fazemos)$ /index?q=$1 [R=301]
+  RewriteRule (contactos)$ /index?q=$1 [R=301]
+  RewriteRule (doar)$ /index?q=$1 [R=301]
+  RewriteRule (financiamento)$ /index?q=$1 [R=301]
+  RewriteRule (gestao)$ /index?q=$1 [R=301]
+  RewriteRule (historia)$ /index?q=$1 [R=301]
+  RewriteRule (home)$ /index?q=$1 [R=301]
+  RewriteRule (imagem)$ /index?q=$1 [R=301]
+  RewriteRule (junta-te-a-nos)$ /index?q=$1 [R=301]
+  RewriteRule (o-que-fazemos)$ /index?q=$1 [R=301]
+  RewriteRule (o-que-podes-fazer)$ /index?q=$1 [R=301]
+  RewriteRule (orgaos-sociais)$ /index?q=$1 [R=301]
+  RewriteRule (parceiros-internacionais)$ /index?q=$1 [R=301]
+  RewriteRule (parceiros-nacionais)$ /index?q=$1 [R=301]
+  RewriteRule (parcerias)$ /index?q=$1 [R=301]
+  RewriteRule (pilares)$ /index?q=$1 [R=301]
+  RewriteRule (projecto-curta-duracao)$ /index?q=$1 [R=301]
+  RewriteRule (projecto-longa-duracao)$ /index?q=$1 [R=301]
+  RewriteRule (quem-confia-em-nos)$ /index?q=$1 [R=301]
+  RewriteRule (quem-somos)$ /index?q=$1 [R=301]
+  RewriteRule (sao-tome-e-principe)$ /index?q=$1 [R=301]
+  RewriteRule (voluntarios)$ /index?q=$1 [R=301]
+  RewriteRule (voluntarios-2009)$ /index?q=$1 [R=301]
+  RewriteRule (voluntarios-2010)$ /index?q=$1 [R=301]
+
+  RewriteRule (search/node/.*)$ /index?q=$1 [R=301]
+  RewriteRule (user/.*)$ /index?q=$1 [R=301]
+
+  RewriteRule (admin/.*)$ /index?q=$1 [R=301]
+
   # If your site can be accessed both with and without the 'www.' prefix, you
   # can use one of the following settings to redirect users to your preferred
   # URL, either WITH or WITHOUT the 'www.' prefix. Choose ONLY one option:
@@ -104,17 +134,17 @@ DirectoryIndex index.php index.html index.htm
   #
   # If your site is running in a VirtualDocumentRoot at http://example.com/,
   # uncomment the following line:
-
-  RewriteBase /~gastagus.daemon
+  RewriteBase /gastagus/
 
   # Pass all requests not referring directly to files in the filesystem to
   # index.php. Clean URLs are handled in drupal_environment_initialize().
+
   RewriteCond %{REQUEST_FILENAME} !-f
   RewriteCond %{REQUEST_FILENAME} !-d
   RewriteCond %{REQUEST_URI} !=/favicon.ico
   RewriteRule ^ index.php [L]
 
-  # Rules to correctly serve gzip compressed CSS and JS files.
+
   # Requires both mod_rewrite and mod_headers to be enabled.
   <IfModule mod_headers.c>
     # Serve gzip compressed CSS files if they exist and the client accepts gzip.
@@ -139,3 +169,5 @@ DirectoryIndex index.php index.html index.htm
     </FilesMatch>
   </IfModule>
 </IfModule>
+
+# $Id$
