--- a/.gitmodules
+++ b/.gitmodules
@@ -3,25 +3,25 @@
 	url = git@github.com:GASTagus/theme.git
 [submodule "sites/all/modules/views"]
 	path = sites/all/modules/views
-	url = git://drupalcode.org/project/views.git
+	url = http://git.drupal.org/project/views.git
 [submodule "sites/all/modules/ctools"]
 	path = sites/all/modules/ctools
-	url = git://drupalcode.org/project/ctools.git
+	url = http://git.drupal.org/project/ctools.git
 [submodule "sites/all/modules/wysiwyg"]
 	path = sites/all/modules/wysiwyg
-	url = git://drupalcode.org/project/wysiwyg.git
+	url = http://git.drupal.org/project/wysiwyg.git
 [submodule "sites/all/modules/metatags_quick"]
 	path = sites/all/modules/metatags_quick
-	url = git://drupalcode.org/project/metatags_quick.git
+	url = http://git.drupal.org/project/metatags_quick.git
 [submodule "sites/all/modules/redirect"]
 	path = sites/all/modules/redirect
-	url = git://drupalcode.org/project/redirect.git
+	url = http://git.drupal.org/project/redirect.git
 [submodule "sites/all/libraries"]
 	path = sites/all/libraries
 	url = git@github.com:GASTagus/libraries.git
 [submodule "sites/all/modules/google_analytics"]
 	path = sites/all/modules/google_analytics
-	url = git://git.drupal.org/project/google_analytics.git
+	url = http://git.drupal.org/project/google_analytics.git
 [submodule "sites/all/modules/imce"]
 	path = sites/all/modules/imce
 	url = http://git.drupal.org/project/imce.git
